fix(link-list): improved arrow button alignment

--- a/express/blocks/link-list/link-list.css
+++ b/express/blocks/link-list/link-list.css
@@ -72,7 +72,7 @@ main .link-list a.button.link-list-carousel-arrow {
   float: left;
   width: 32px;
   height: 32px;
-  margin: 4px 20px;
+  margin: 4px 0;
   background: var(--color-white);
   box-shadow: 0 4px 8px 2px rgba(102, 102, 102, 0.1);
   border-radius: 50%;
